Changes for share link

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -54,7 +54,7 @@
 		<span id="contentTitle" class="hidden centered showOnContentView hideOnDescriptionView"></span>
 		<span style="position:absolute; width:20%; font-size:90%;" class="pointer">
 			<span class="shareLink hideOnLinkCopied">
-				<i data-short-link="" class="fa-regular fa-share-from-square shortLink" onclick="onCopyShortLink()"></i>&nbsp;share
+				<i data-short-link="" class="fa-regular fa-share-from-square shortLink" onclick="onCopyShortLink()"></i>&nbsp;<span onclick="onCopyShortLink()">share</span>
 			</span>
 			<span class="hidden showOnLinkCopied">Link copied</span>
 		</span>
