--- a/adventure/index.html
+++ b/adventure/index.html
@@ -52,7 +52,7 @@
 	<!-- The back button when looking at content or description -->
 	<div id="subMenuSection" class="hidden showOnContentView showOnDescriptionView hideOnListView showOnError" >
 		<span id="contentTitle" class="hidden centered showOnContentView hideOnDescriptionView"></span>
-		<span style="position:absolute; width:20%; font-size:90%;" class="pointer">
+		<span style="position:absolute; width:30%; text-align:right; font-size:90%;" class="pointer">
 			<span class="shareLink hideOnLinkCopied">
 				<i data-short-link="" class="fa-regular fa-share-from-square shortLink" onclick="onCopyShortLink()"></i>&nbsp;<span onclick="onCopyShortLink()">share</span>
 			</span>
