Adjust link sharing

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -19,12 +19,12 @@
 				<span class="fa fa-chevron-circle-left pointer iconSize hidden showOnContentView showOnDescriptionView hideOnListView" onclick="onPreviousView()"></span>
 			</div>
 			<div class="menuItem centered">
-				<h1 style="margin:0px;" class="pointer">
+				<h2 style="margin:0px;" class="pointer">
 					<span id="homeIcon2" style="font-size:smaller;"> Dejai's Adventures</span>
-				</h1>
-				<h3>
+				</h2>
+				<h2>
 					<span id="adventureTitle" onclick="onShowDescription()"></span>
-				</h3> 
+				</h2> 
 			</div>
 		</div>
 		<div id="userIconSection" class="pointer">
@@ -52,7 +52,7 @@
 	<!-- The back button when looking at content or description -->
 	<div id="subMenuSection" class="hidden showOnContentView showOnDescriptionView hideOnListView showOnError" >
 		<span id="contentTitle" class="hidden centered showOnContentView hideOnDescriptionView"></span>
-		<span style="position:absolute; width:30%; text-align:right; font-size:90%;" class="pointer">
+		<span class="shareLinkSection pointer">
 			<span class="shareLink hideOnLinkCopied">
 				<i data-short-link="" class="fa-regular fa-share-from-square shortLink" onclick="onCopyShortLink()"></i>&nbsp;<span onclick="onCopyShortLink()">share</span>
 			</span>
