Adjust content view management

--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 	<div>
 		<div id="menuSection" class="menuSection dtk-menu-sticky dtk-theme-blackbg" >
 			<div id="menuItems">
-				<div class="menuItem menuItemLeft">
+				<div class="menuItem menuItemMiddle">
 					<h1 id="mainTitle" style="margin:0px;" class="pointer fadeOnSearch">
 						<span id="homeIcon2" style="font-size:smaller;">Dejai's Adventures</span>
 					</h1>
 				</div>
 				<div class="menuItem menuItemRight">
-
 					<div id="searchBarSection" class="searchBarSection">
 						<input id="searchBarInput" type="text" placeholder="Search adventures ... " onkeyup="onSearchAdventures()">
 						<i id="searchToggleIcon" class="fa-solid fa-magnifying-glass pointer searchIcons" onclick="toggleSearchBar(this)"></i> 
