--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<i id="searchClearIcon" class="fa-solid fa-xmark hidden searchIcons pointer" aria-hidden="true" onclick="onClearSearch()"></i>
 					</div>
 					<i id="hamburgerMenuIcon" class="fa-solid fa-bars pointer menuIcons" onclick="toggleSideNav()"></i>
-					<i id="closeMenuIcon" class="fa-solid fa-x hidden pointer menuIcons" onclick="toggleSideNav()"></i>
+					<i id="closeMenuIcon" class="fa-solid fa-xmark hidden pointer menuIcons" onclick="toggleSideNav()"></i>
 				</div>
 			</div>
 			<hr class="menuSeparator" style="clear:both;"/>
