--- a/adventure/index.html
+++ b/adventure/index.html
@@ -19,7 +19,7 @@
 			</div>
 			<div class="menuItem menuItemRight">
 				<i id="hamburgerMenuIcon" class="fa-solid fa-bars pointer menuIcons" onclick="toggleSideNav()"></i>
-				<i id="closeMenuIcon" class="fa-solid fa-x hidden pointer menuIcons" onclick="toggleSideNav()"></i>
+				<i id="closeMenuIcon" class="fa-solid fa-xmark hidden pointer menuIcons" onclick="toggleSideNav()"></i>
 			</div>
 		</div>
 		<hr class="menuSeparator" style="clear:both;"/>
