Add load before load

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -35,7 +35,7 @@
 	<!-- Messages related to the adventure/content -->
 	<div id="messageSection" class="centered">
 		<h3 id="pageMessages">
-			<img id="loadingGif" class="hidden hideOnListView hideOnContentView hideOnDescriptionView" style="width:10%;height:10%;" src="https://dejai.github.io/scripts/assets/img/loading1.gif" alt="...loading">
+			<img id="loadingGif" class="hidden hideOnListView hideOnContentView hideOnDescriptionView" style="width:45px;height:45px;" src="https://dejai.github.io/scripts/assets/img/loading1.gif" alt="...loading">
 		</h3>
 		<button class="loginButton hidden showOnLoginRequired">Login</button>
 	</div>
