--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 		</div>
 
 		<!-- List of adventures -->
-		<div id="adventuresPanel" class="toggleOnSideNavMobile"></div>
+		<div id="adventuresPanel" class="toggleOnSideNavMobile">
+			<img id="loadingGif" style="width:35px;height:35px;" src="https://dejai.github.io/scripts/assets/img/loading1.gif" alt="Loading ...">
+		</div>
 	</div>
 	<span id=""></span>
 </body>
