No back button if single content

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -42,7 +42,7 @@
 
 	<!-- The back button when looking at content or description -->
 	<div id="subMenuSection" class="hidden showOnContentView showOnDescriptionView hideOnListView showOnError" >
-		<span class="subMenuItem subMenuItemLeft fa fa-chevron-circle-left pointer iconSize hidden showOnContentView showOnDescriptionView hideOnListView" onclick="onPreviousView()"></span>
+		<span class="subMenuItem subMenuItemLeft fa fa-chevron-circle-left pointer iconSize hidden showOnContentView showOnDescriptionView hideOnListView hideIfOneContent" onclick="onPreviousView()"></span>
 		<span id="contentTitle" class="subMenuItem subMenuItemMiddle hidden centered showOnContentView hideOnDescriptionView"></span>
 		<span class="shareLinkSection pointer subMenuItem subMenuItemRight">
 			<span class="shareLink hideOnLinkCopied">
