--- a/adventure/index.html
+++ b/adventure/index.html
@@ -4,8 +4,8 @@
 	<!-- Base of the path -->
 	<base href="../" target="_blank">
 	<title>Dejai's Adventures</title>
-	<link rel="stylesheet" type="text/css" href="src/css/main.css?v=2">
-	<link rel="stylesheet" type="text/css" href="src/css/adventure.css?v=2">
+	<link rel="stylesheet" type="text/css" href="src/css/main.css?v=2.5.2">
+	<link rel="stylesheet" type="text/css" href="src/css/adventure.css?v=2.5.2">
 	<link rel="stylesheet" type="text/css" href="https://dejai.github.io/scripts/css/dtk-styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -44,9 +44,9 @@
 	<div id="subMenuSection" class="hidden showOnContentView showOnDescriptionView hideOnListView showOnError" >
 		<span class="subMenuItem subMenuItemLeft fa fa-chevron-circle-left pointer iconSize hidden showOnContentView showOnDescriptionView hideOnListView hideIfOneContent" onclick="onPreviousView()"></span>
 		<span id="contentTitle" class="subMenuItem subMenuItemMiddle hidden centered showOnContentView hideOnDescriptionView"></span>
-		<span class="shareLinkSection pointer subMenuItem subMenuItemRight">
+		<span class="shareLinkSection pointer subMenuItem subMenuItemRight hidden">
 			<span class="shareLink hideOnLinkCopied">
-				<i data-short-link="" class="fa-regular fa-share-from-square shortLink" onclick="onCopyShortLink()"></i>&nbsp;<span onclick="onCopyShortLink()">share</span>
+				<i data-short-link="" class="fa-regular fa-share-from-square shortLink " onclick="onCopyShortLink()"></i>&nbsp;<span onclick="onCopyShortLink()">share</span>
 			</span>
 			<span class="hidden showOnLinkCopied">Link copied</span>
 		</span>
@@ -75,11 +75,11 @@
 <!-- Stream Embed API -->
 <script src="https://embed.videodelivery.net/embed/sdk.latest.js"></script>
 <!-- Common Scripts -->
-<script src="https://dejai.github.io/scripts/js/v2/my.js?v=2"></script>
-<script src="https://dejai.github.io/scripts/js/v2/trellowrapper.js?v=2"></script>
-<script src="https://dejai.github.io/scripts/js/v2/cloudflarewrapper.js?v=2"></script>
+<script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.5.2"></script>
+<script src="https://dejai.github.io/scripts/js/v2/trellowrapper.js?v=2.5.2"></script>
+<script src="https://dejai.github.io/scripts/js/v2/cloudflarewrapper.js?v=2.5.2"></script>
 <!-- My Adventure code -->
-<script type="text/javascript" src="src/js/models.js?v=1"></script>
-<script type="text/javascript" src="src/js/menu.js?v=1"></script>
-<script type="text/javascript" src="src/js/adventure.js?v=1"></script>
+<script type="text/javascript" src="src/js/models.js?v=2.5.2"></script>
+<script type="text/javascript" src="src/js/menu.js?v=2.5.2"></script>
+<script type="text/javascript" src="src/js/adventure.js?v=2.5.2"></script>
 </html>
