--- a/auth/index.html
+++ b/auth/index.html
@@ -9,9 +9,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="dtk-theme-blackbg">
-    <div id="loginSection" class="hidden centered dtk-center-block-large">
+    <div id="loginSection" class="hidden centered dtk-center-block-large" style="height:400px;">
         <h1>Login to Dejai's Adventures</h1>
-        <iframe id="dtk-LoginFrame" style="border:none;"></iframe>
+        <iframe id="dtk-LoginFrame" class="dtk-frame" style="border:none;"></iframe>
     </div>
     <p class="hidden showOnLoginFail showOnLogoutFail">There was an issue with your Authentication.</p>
     <button class="hidden showOnLoginFail showOnLogoutFail" onclick="history.back()">Go back</button>
