--- a/adventure/index.html
+++ b/adventure/index.html
@@ -4,8 +4,8 @@
 	<!-- Base of the path -->
 	<base href="../" target="_blank">
 	<title>Dejai's Adventures</title>
-	<link rel="stylesheet" type="text/css" href="src/css/main.css?v=2.5.2">
-	<link rel="stylesheet" type="text/css" href="src/css/adventure.css?v=2.5.2">
+	<link rel="stylesheet" type="text/css" href="src/css/main.css?v=2.5.3">
+	<link rel="stylesheet" type="text/css" href="src/css/adventure.css?v=2.5.3">
 	<link rel="stylesheet" type="text/css" href="https://dejai.github.io/scripts/css/dtk-styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,16 +28,13 @@
 	<!-- The side nav section -->
 	<div class="sideNav right">
 		<span class="userName navRow"></span>
-		<a class="authLink navRow navItem dtk-href-no-textdec" href="auth/?action=0" target="_top"></a>
+		<a class="authLink loginAction navRow navItem dtk-href-no-textdec" href="auth/?action=0" target="_top"></a>
 		<span class="navRow navItem" onclick="onShowDescription()" style="color:black;">DETAILS</span>
 	</div>
 
 	<!-- Messages related to the adventure/content -->
 	<div id="messageSection" class="centered">
-		<h3 id="pageMessages">
-			<img id="loadingGif" class="hidden hideOnListView hideOnContentView hideOnDescriptionView" style="width:45px;height:45px;" src="https://dejai.github.io/scripts/assets/img/loading1.gif" alt="...loading">
-		</h3>
-		<button class="loginButton hidden showOnLoginRequired">Login</button>
+		<img id="loadingGif" class="hidden hideOnListView hideOnContentView hideOnDescriptionView" style="width:45px;height:45px;" src="https://dejai.github.io/scripts/assets/img/loading1.gif" alt="...loading">
 	</div>
 
 	<!-- The back button when looking at content or description -->
@@ -71,15 +68,16 @@
 		</div>
 		<div id="videoFramePanel"></div>
 	</div>
+
 </body>
 <!-- Stream Embed API -->
 <script src="https://embed.videodelivery.net/embed/sdk.latest.js"></script>
 <!-- Common Scripts -->
-<script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.5.2"></script>
-<script src="https://dejai.github.io/scripts/js/v2/trellowrapper.js?v=2.5.2"></script>
-<script src="https://dejai.github.io/scripts/js/v2/cloudflarewrapper.js?v=2.5.2"></script>
+<script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.5.3"></script>
+<script src="https://dejai.github.io/scripts/js/v2/trellowrapper.js?v=2.5.3"></script>
+<script src="https://dejai.github.io/scripts/js/v2/cloudflarewrapper.js?v=2.5.3"></script>
 <!-- My Adventure code -->
-<script type="text/javascript" src="src/js/models.js?v=2.5.2"></script>
-<script type="text/javascript" src="src/js/menu.js?v=2.5.2"></script>
-<script type="text/javascript" src="src/js/adventure.js?v=2.5.2"></script>
+<script type="text/javascript" src="src/js/models.js?v=2.5.3"></script>
+<script type="text/javascript" src="src/js/menu.js?v=2.5.3"></script>
+<script type="text/javascript" src="src/js/adventure.js?v=2.5.3"></script>
 </html>
