Username on events

--- a/events/index.html
+++ b/events/index.html
@@ -27,7 +27,7 @@
 
 	<!-- Navigation right -->
 	<div class="sideNav right">
-		<span class="userName mobile navRow"></span>
+		<span class="userName navRow"></span>
 		<a class="authLink loginAction navRow navItem dtk-href-no-textdec" href="auth/?action=0" target="_top"></a>
 	</div>
 
