--- a/auth/index.html
+++ b/auth/index.html
@@ -2,27 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<base href="../" target="_blank">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auth</title>
-	<link rel="stylesheet" type="text/css" href="https://dejai.github.io/scripts/css/dtk-styles.css?v=2.5.3">
+    <link rel="stylesheet" type="text/css" href="src/css/main.css?v=2.5.8">
+	<link rel="stylesheet" type="text/css" href="https://dejai.github.io/scripts/css/dtk-styles.css?v=2.5.8">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body class="dtk-theme-blackbg">
+<body class="pageBackground">
+    <div id="menuSection" class="menuSection dtk-menu-sticky">
+		<div id="menuItems">
+			<div class="menuItem menuItemLeft">
+                <h2 id="loginPageTitle" class="mainHeading hidden">Login to Dejai's Adventures</h2>
+			</div>
+		</div>
+	</div>
     <div id="loginSection" class="hidden centered dtk-center-block-large" style="height:400px;">
-        <h1>Login to Dejai's Adventures</h1>
         <iframe id="dtk-LoginFrame" class="dtk-frame" style="border:none;"></iframe>
     </div>
     <p class="hidden showOnLoginFail showOnLogoutFail">There was an issue with your Authentication.</p>
     <button class="hidden showOnLoginFail showOnLogoutFail" onclick="history.back()">Go back</button>
 </body>
-    <script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.5.3"></script>
+    <script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.5.8"></script>
     <script>
         MyDom.ready( async ()=> {
             var action = MyUrls.getSearchParam("action");
             // If 1 ... then login;
             if(action == "1") {
                 await MyAuth.onLogin();
+                MyDom.showContent("#loginPageTitle");
                 MyDom.showContent("#loginSection");
             } else {
                 await MyAuth.onLogout();
