--- a/events/index.html
+++ b/events/index.html
@@ -4,39 +4,37 @@
 	<!-- Base of the path -->
 	<base href="../" target="_blank">
 	<title>Event</title>
-	<link rel="stylesheet" type="text/css" href="src/css/main.css?v=2.5.3">
-	<link rel="stylesheet" type="text/css" href="src/css/events.css?v=2.5.3">
+	<link rel="stylesheet" type="text/css" href="src/css/main.css?v=2.5.8">
+	<link rel="stylesheet" type="text/css" href="src/css/events.css?v=2.5.8">
 	<link rel="stylesheet" type="text/css" href="https://dejai.github.io/scripts/css/dtk-styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body class="theme_black_bg">
-
-	<div class="menuSection dtk-menu-sticky dtk-theme-blackbg">
+<body class="pageBackground">
+	<div id="menuSection" class="menuSection dtk-menu-sticky">
 		<div id="menuItems">
 			<div class="menuItem menuItemLeft">
 				<h2 id="eventName" class="mainHeading"></h2>
 			</div>
 			<div class="menuItem menuItemRight">
-				<i id="hamburgerMenuIcon" class="fa-solid fa-bars pointer menuIcons" onclick="toggleSideNav()"></i>
-				<i id="closeMenuIcon" class="fa-solid fa-xmark hidden pointer menuIcons" onclick="toggleSideNav()"></i>
+				<i id="hamburgerMenuIcon" class="fa-solid fa-bars pointer menuIcons" onclick="toggleDropdownNav()"></i>
+				<i id="closeMenuIcon" class="fa-solid fa-xmark hidden pointer menuIcons" onclick="toggleDropdownNav()"></i>
+				<div id="dropdownNav">
+					<span class="userName navRow"></span>
+					<span class="navRow navItem">
+						<a class="authLink loginAction dtk-href-no-textdec" href="auth/?action=0" target="_top"></a>
+					</span>
+				</div>
 			</div>
 		</div>
-		<hr class="menuSeparator" style="clear:both;"/>
-	</div>
-
-	<!-- Navigation right -->
-	<div class="sideNav right">
-		<span class="userName navRow"></span>
-		<a class="authLink loginAction navRow navItem dtk-href-no-textdec" href="auth/?action=0" target="_top"></a>
 	</div>
 
 	<!-- A description of the event -->
-	<div id="eventOverviewSection" class="showOnLoaded centered hideOnSubmitted">
-	</div>
+	<div id="eventOverviewSection" class="showOnLoaded centered hideOnSubmitted"></div>
 
+	<!-- The loading view -->
 	<div class="hideOnFormLoad centered showOnSubmitting hideOnSubmitted">
-		<img id="loadingGif" style="width:35px;height:35px;" src="https://dejai.github.io/scripts/assets/img/loading1.gif" alt="Loading ...">
+		<span class="hideOnListView hideOnContentView hideOnDescriptionView" style="font-size:35px;"><i class="fa-solid fa-spinner dtk-spinning fast"></i></span>
 	</div>
 
 	<!-- Form for the event -->
@@ -44,10 +42,10 @@
 
 </body>
 <!-- Common Scripts -->
-<script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.5.3"></script>
-<script src="https://dejai.github.io/scripts/js/v3/trellowrapper.js?v=2.5.3"></script>
+<script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.5.8"></script>
+<script src="https://dejai.github.io/scripts/js/v3/trellowrapper.js?v=2.5.8"></script>
 <!-- My Adventure code -->
-<script type="text/javascript" src="src/js/models.js?v=2.5.3"></script>
-<script type="text/javascript" src="src/js/menu.js?v=2.5.3"></script>
-<script type="text/javascript" src="src/js/events.js?v=2.5.3"></script>
+<script type="text/javascript" src="src/js/models.js?v=2.5.8"></script>
+<script type="text/javascript" src="src/js/menu.js?v=2.5.8"></script>
+<script type="text/javascript" src="src/js/events.js?v=2.5.8"></script>
 </html>
