--- a/index.html
+++ b/index.html
@@ -2,51 +2,51 @@
 <html>
 <head>
 	<title>Dejai's Adventures</title>
-	<link rel="stylesheet" type="text/css" href="./src/css/main.css?v=2.5.3">
+	<link rel="stylesheet" type="text/css" href="./src/css/main.css?v=2.5.8">
 	<link rel="stylesheet" type="text/css" href="https://dejai.github.io/scripts/css/dtk-styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body class="dtk-theme-blackbg">
-	<div>
-		<div id="menuSection" class="menuSection dtk-menu-sticky dtk-theme-blackbg" >
-			<div id="menuItems">
-				<div class="menuItem menuItemMiddle">
-					<h1 id="mainTitle" style="margin:0px;" class="pointer fadeOnSearch">
-						<span id="homeIcon2" style="font-size:smaller;">Dejai's Adventures</span>
-					</h1>
+<body class="pageBackground">
+	<div id="menuSection" class="menuSection dtk-menu-sticky">
+		<div id="menuItems">
+			<div class="menuItem menuItemMiddle">
+				<h1 id="mainTitle" style="margin:0px;" class="pointer fadeOnSearch">
+					<span id="homeIcon2" style="font-size:smaller;">Dejai's Adventures</span>
+				</h1>
+			</div>
+			<div class="menuItem menuItemRight">
+				<div id="searchBarSection" class="searchBarSection">
+					<input id="searchBarInput" type="text" placeholder="Search adventures ... " onkeyup="onSearchAdventures()">
+					<i id="searchToggleIcon" class="fa-solid fa-magnifying-glass pointer searchIcons" onclick="toggleSearchBar(this)"></i> 
+					<i id="searchClearIcon" class="fa-solid fa-xmark hidden searchIcons pointer" aria-hidden="true" onclick="onClearSearch()"></i>
 				</div>
-				<div class="menuItem menuItemRight">
-					<div id="searchBarSection" class="searchBarSection">
-						<input id="searchBarInput" type="text" placeholder="Search adventures ... " onkeyup="onSearchAdventures()">
-						<i id="searchToggleIcon" class="fa-solid fa-magnifying-glass pointer searchIcons" onclick="toggleSearchBar(this)"></i> 
-						<i id="searchClearIcon" class="fa-solid fa-xmark hidden searchIcons pointer" aria-hidden="true" onclick="onClearSearch()"></i>
-					</div>
-					<i id="hamburgerMenuIcon" class="fa-solid fa-bars pointer menuIcons" onclick="toggleSideNav()"></i>
-					<i id="closeMenuIcon" class="fa-solid fa-xmark hidden pointer menuIcons" onclick="toggleSideNav()"></i>
+				<i id="hamburgerMenuIcon" class="fa-solid fa-bars pointer menuIcons" onclick="toggleDropdownNav()"></i>
+				<i id="closeMenuIcon" class="fa-solid fa-xmark hidden pointer menuIcons" onclick="toggleDropdownNav()"></i>
+				<div id="dropdownNav">
+					<span class="userName navRow"></span>
+					<span class="navRow navItem">
+						<a class="authLink loginAction dtk-href-no-textdec" href="auth/?action=0" target="_top"></a>
+					</span>
 				</div>
 			</div>
-			<hr class="menuSeparator" style="clear:both;"/>
-		</div>
-
-		<div class="sideNav right">
-			<span class="userName navRow"></span>
-			<a class="authLink navRow navItem dtk-href-no-textdec" href="auth/?action=0" target="_top"></a>
-		</div>
-
-		<!-- List of adventures -->
-		<div id="adventuresPanel" class="toggleOnSideNavMobile">
-			<img id="loadingGif" style="width:35px;height:35px;" src="https://dejai.github.io/scripts/assets/img/loading1.gif" alt="Loading ...">
 		</div>
 	</div>
-	<span id=""></span>
+
+	<!-- List of adventures -->
+	<div id="adventuresPanel" class="toggleOnSideNavMobile centered">
+		<div class="centered">
+			<span class="loadingGif2" style="font-size:35px;"><i class="fa-solid fa-spinner dtk-spinning fast"></i></span>
+		</div>
+	</div>
+
 </body>
 <!-- Common Scripts -->
-<script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.5.3"></script>
-<script src="https://dejai.github.io/scripts/js/v3/trellowrapper.js?v=2.5.3"></script>
-<script src="https://dejai.github.io/scripts/js/v2/cloudflarewrapper.js?v=2.5.3"></script>
+<script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.5.8"></script>
+<script src="https://dejai.github.io/scripts/js/v3/trellowrapper.js?v=2.5.8"></script>
+<script src="https://dejai.github.io/scripts/js/v2/cloudflarewrapper.js?v=2.5.8"></script>
 <!-- Adventure SCripts -->
-<script type="text/javascript" src="./src/js/models.js?v=2.5.3"></script>
-<script type="text/javascript" src="src/js/menu.js?v=2.5.3"></script>
-<script type="text/javascript" src="./src/js/main.js?v=2.5.3"></script>
+<script type="text/javascript" src="./src/js/models.js?v=2.5.8"></script>
+<script type="text/javascript" src="src/js/menu.js?v=2.5.8"></script>
+<script type="text/javascript" src="./src/js/main.js?v=2.5.8"></script>
 </html>
