Table-based menu

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -20,7 +20,7 @@
 				<i id="hamburgerMenuIcon" class="fa-solid fa-bars pointer menuIcons" onclick="toggleDropdownNav()"></i>
 				<i id="closeMenuIcon" class="fa-solid fa-xmark hidden pointer menuIcons" onclick="toggleDropdownNav()"></i>
 				<div id="dropdownNav">
-					<span class="userName navRow"></span>
+					<span class="userName"></span>
 					<span class="navRow navItem">
 						<a class="authLink loginAction dtk-href-no-textdec" href="auth/?action=0" target="_top"></a>
 					</span>
