--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
 	<title>Dejai's Adventures</title>
-	<link rel="stylesheet" type="text/css" href="./src/css/main.css?v=2.5.8">
+	<link rel="stylesheet" type="text/css" href="./src/css/main.css?v=2.5.9">
 	<link rel="stylesheet" type="text/css" href="https://dejai.github.io/scripts/css/dtk-styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body class="pageBackground">
-	<div id="menuSection" class="menuSection dtk-menu-sticky">
+<body class="dtk-margin-0 dtk-theme-cauldron">
+	
+	<div id="menuSection" class="menuSection dtk-menu-sticky dtk-theme-cauldron-inverse">
 		<div id="menuItems">
 			<div class="menuItem menuItemMiddle">
 				<h1 id="mainTitle" style="margin:0px;" class="pointer fadeOnSearch">
@@ -23,11 +24,9 @@
 				</div>
 				<i id="hamburgerMenuIcon" class="fa-solid fa-bars pointer menuIcons" onclick="toggleDropdownNav()"></i>
 				<i id="closeMenuIcon" class="fa-solid fa-xmark hidden pointer menuIcons" onclick="toggleDropdownNav()"></i>
-				<div id="dropdownNav">
+				<div id="dropdownNav" class="dtk-theme-cauldron-inverse dtk-theme-cauldron-text1">
 					<span class="userName navRow"></span>
-					<span class="navRow navItem">
-						<a class="authLink loginAction dtk-href-no-textdec" href="auth/?action=0" target="_top"></a>
-					</span>
+					<div class="navRow navItem authLink pointer" href="auth/?action=0" onclick="MyUrls.navigateTo(this.getAttribute('href'))"></div>
 				</div>
 			</div>
 		</div>
@@ -36,17 +35,17 @@
 	<!-- List of adventures -->
 	<div id="adventuresPanel" class="toggleOnSideNavMobile centered">
 		<div class="centered">
-			<span class="loadingGif2" style="font-size:35px;"><i class="fa-solid fa-spinner dtk-spinning fast"></i></span>
+			<span class="loadingGif2" style="font-size:35px;"><i class="fa-solid fa-spinner dtk-spinning dtk-spinning-1000"></i></span>
 		</div>
 	</div>
 
 </body>
 <!-- Common Scripts -->
-<script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.5.8"></script>
-<script src="https://dejai.github.io/scripts/js/v3/trellowrapper.js?v=2.5.8"></script>
-<script src="https://dejai.github.io/scripts/js/v2/cloudflarewrapper.js?v=2.5.8"></script>
+<script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.5.9"></script>
+<script src="https://dejai.github.io/scripts/js/v3/trellowrapper.js?v=2.5.9"></script>
+<script src="https://dejai.github.io/scripts/js/v2/cloudflarewrapper.js?v=2.5.9"></script>
 <!-- Adventure SCripts -->
-<script type="text/javascript" src="./src/js/models.js?v=2.5.8"></script>
-<script type="text/javascript" src="src/js/menu.js?v=2.5.8"></script>
-<script type="text/javascript" src="./src/js/main.js?v=2.5.8"></script>
+<script type="text/javascript" src="./src/js/models.js?v=2.5.9"></script>
+<script type="text/javascript" src="src/js/menu.js?v=2.5.9"></script>
+<script type="text/javascript" src="./src/js/main.js?v=2.5.9"></script>
 </html>
