--- a/adventure/index.html
+++ b/adventure/index.html
@@ -4,26 +4,22 @@
 	<!-- Base of the path -->
 	<base href="../" target="_blank">
 	<title>Dejai's Adventures</title>
-	<link rel="stylesheet" type="text/css" href="src/css/main.css?v=2.5.9">
-	<link rel="stylesheet" type="text/css" href="src/css/adventure.css?v=2.5.9">
+	<link rel="stylesheet" type="text/css" href="src/css/main.css?v=2.6.2">
+	<link rel="stylesheet" type="text/css" href="src/css/adventure.css?v=2.6.2">
 	<link rel="stylesheet" type="text/css" href="https://dejai.github.io/scripts/css/dtk-styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body class="dtk-margin-0 dtk-theme-cauldron">
 	<div id="menuSection" class="menuSection dtk-menu-sticky dtk-theme-cauldron-inverse">
-		<div id="menuItems">
+		<div id="menuItems" class="dtk-theme-cauldron-text1">
 			<div class="menuItem menuItemLeft">
 				<h3 id="adventureTitle" class="mainHeading"></h3>
 			</div>
 			<div class="menuItem menuItemRight">
 				<i id="hamburgerMenuIcon" class="fa-solid fa-bars pointer menuIcons" onclick="toggleDropdownNav()"></i>
 				<i id="closeMenuIcon" class="fa-solid fa-xmark hidden pointer menuIcons" onclick="toggleDropdownNav()"></i>
-				<div id="dropdownNav">
-					<div class="userName navRow"></div>
-					<div class="navRow navItem authLink pointer" data-href="auth/?action=0" onclick="MyUrls.navigateTo(this.getAttribute('data-href'))"></div>
-					<div class="navRow navItem pointer" onclick="onShowDescription()" style="color:black;">DETAILS</div>
-				</div>
+				<div id="dropdownNav"></div>
 			</div>
 		</div>
 	</div>
@@ -69,11 +65,11 @@
 <!-- Stream Embed API -->
 <script src="https://embed.videodelivery.net/embed/sdk.latest.js"></script>
 <!-- Common Scripts -->
-<script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.5.9"></script>
-<script src="https://dejai.github.io/scripts/js/v2/trellowrapper.js?v=2.5.9"></script>
-<script src="https://dejai.github.io/scripts/js/v2/cloudflarewrapper.js?v=2.5.9"></script>
+<script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.6.2"></script>
+<script src="https://dejai.github.io/scripts/js/v2/trellowrapper.js?v=2.6.2"></script>
+<script src="https://dejai.github.io/scripts/js/v2/cloudflarewrapper.js?v=2.6.2"></script>
 <!-- My Adventure code -->
-<script type="text/javascript" src="src/js/models.js?v=2.5.9"></script>
-<script type="text/javascript" src="src/js/menu.js?v=2.5.9"></script>
-<script type="text/javascript" src="src/js/adventure.js?v=2.5.9"></script>
+<script type="text/javascript" src="src/js/models.js?v=2.6.2"></script>
+<script type="text/javascript" src="src/js/menu.js?v=2.6.2"></script>
+<script type="text/javascript" src="src/js/adventure.js?v=2.6.2"></script>
 </html>
