--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Dejai's Adventures</title>
-	<link rel="stylesheet" type="text/css" href="./src/css/main.css?v=2.5.9">
+	<link rel="stylesheet" type="text/css" href="./src/css/main.css?v=2.6.2">
 	<link rel="stylesheet" type="text/css" href="https://dejai.github.io/scripts/css/dtk-styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,11 +10,9 @@
 <body class="dtk-margin-0 dtk-theme-cauldron">
 	
 	<div id="menuSection" class="menuSection dtk-menu-sticky dtk-theme-cauldron-inverse">
-		<div id="menuItems">
-			<div class="menuItem menuItemMiddle">
-				<h1 id="mainTitle" style="margin:0px;" class="pointer fadeOnSearch">
-					<span id="homeIcon2" style="font-size:smaller;">Dejai's Adventures</span>
-				</h1>
+		<div id="menuItems" class="dtk-theme-cauldron-text1">
+			<div class="menuItem menuItemLeft">
+				<h2 id="mainTitle" style="margin:0px;" class="pointer fadeOnSearch">Dejai's Adventures</h2>
 			</div>
 			<div class="menuItem menuItemRight">
 				<div id="searchBarSection" class="searchBarSection">
@@ -24,10 +22,7 @@
 				</div>
 				<i id="hamburgerMenuIcon" class="fa-solid fa-bars pointer menuIcons" onclick="toggleDropdownNav()"></i>
 				<i id="closeMenuIcon" class="fa-solid fa-xmark hidden pointer menuIcons" onclick="toggleDropdownNav()"></i>
-				<div id="dropdownNav" class="dtk-theme-cauldron-inverse dtk-theme-cauldron-text1">
-					<span class="userName navRow"></span>
-					<div class="navRow navItem authLink pointer" href="auth/?action=0" onclick="MyUrls.navigateTo(this.getAttribute('href'))"></div>
-				</div>
+				<div id="dropdownNav" class="dtk-theme-cauldron-inverse dtk-theme-cauldron-text1"></div>
 			</div>
 		</div>
 	</div>
@@ -41,11 +36,11 @@
 
 </body>
 <!-- Common Scripts -->
-<script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.5.9"></script>
-<script src="https://dejai.github.io/scripts/js/v3/trellowrapper.js?v=2.5.9"></script>
-<script src="https://dejai.github.io/scripts/js/v2/cloudflarewrapper.js?v=2.5.9"></script>
+<script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.6.2"></script>
+<script src="https://dejai.github.io/scripts/js/v3/trellowrapper.js?v=2.6.2"></script>
+<script src="https://dejai.github.io/scripts/js/v2/cloudflarewrapper.js?v=2.6.2"></script>
 <!-- Adventure SCripts -->
-<script type="text/javascript" src="./src/js/models.js?v=2.5.9"></script>
-<script type="text/javascript" src="src/js/menu.js?v=2.5.9"></script>
-<script type="text/javascript" src="./src/js/main.js?v=2.5.9"></script>
+<script type="text/javascript" src="./src/js/models.js?v=2.6.2"></script>
+<script type="text/javascript" src="src/js/menu.js?v=2.6.2"></script>
+<script type="text/javascript" src="./src/js/main.js?v=2.6.2"></script>
 </html>
