--- a/auth/index.html
+++ b/auth/index.html
@@ -19,11 +19,13 @@
 			</div>
 		</div>
 	</div>
+    <div class="hidden showOnLoginFail showOnLogoutFail">
+        <p class="hidden showOnLoginFail showOnLogoutFail">There was an issue with your Authentication.</p>
+        <button class="hidden showOnLoginFail showOnLogoutFail" onclick="history.back()">Go back</button>
+    </div>
     <div id="loginSection" class="hidden centered dtk-center-block-large" style="height:400px;">
         <iframe id="dtk-LoginFrame" class="dtk-frame" style="border:none;"></iframe>
     </div>
-    <p class="hidden showOnLoginFail showOnLogoutFail">There was an issue with your Authentication.</p>
-    <button class="hidden showOnLoginFail showOnLogoutFail" onclick="history.back()">Go back</button>
 </body>
     <script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.6.2"></script>
     <script>
