--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<!-- List of adventures -->
 	<div id="adventuresPanel" class="toggleOnSideNavMobile centered">
 		<div class="centered">
-			<span class="loadingGif2" style="font-size:35px;"><i class="fa-solid fa-spinner dtk-spinning dtk-spinning-1000"></i></span>
+			<span style="font-size:35px;"><i class="fa-solid fa-spinner dtk-spinning dtk-spinning-1000"></i></span>
 		</div>
 	</div>
 
