--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Dejai's Adventures</title>
-	<link rel="stylesheet" type="text/css" href="./src/css/main.css?v=2.6.2">
+	<link rel="stylesheet" type="text/css" href="./src/css/main.css?v=2.6.3">
 	<link rel="stylesheet" type="text/css" href="https://dejai.github.io/scripts/css/dtk-styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +17,7 @@
 			<div class="menuItem menuItemRight">
 				<div id="searchBarSection" class="searchBarSection">
 					<input id="searchBarInput" type="text" placeholder="Search adventures ... " onkeyup="onSearchAdventures()">
-					<i id="searchToggleIcon" class="fa-solid fa-magnifying-glass pointer searchIcons" onclick="toggleSearchBar(this)"></i> 
+					<i id="searchToggleIcon" class="fa-solid fa-magnifying-glass pointer searchIcons" onclick="toggleSearchBar()"></i> 
 					<i id="searchClearIcon" class="fa-solid fa-xmark hidden searchIcons pointer" aria-hidden="true" onclick="onClearSearch()"></i>
 				</div>
 				<i id="hamburgerMenuIcon" class="fa-solid fa-bars pointer menuIcons" onclick="toggleDropdownNav()"></i>
@@ -36,11 +36,11 @@
 
 </body>
 <!-- Common Scripts -->
-<script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.6.2"></script>
-<script src="https://dejai.github.io/scripts/js/v3/trellowrapper.js?v=2.6.2"></script>
-<script src="https://dejai.github.io/scripts/js/v2/cloudflarewrapper.js?v=2.6.2"></script>
+<script src="https://dejai.github.io/scripts/js/v2/my.js?v=2.6.3"></script>
+<script src="https://dejai.github.io/scripts/js/v3/trellowrapper.js?v=2.6.3"></script>
+<script src="https://dejai.github.io/scripts/js/v2/cloudflarewrapper.js?v=2.6.3"></script>
 <!-- Adventure SCripts -->
-<script type="text/javascript" src="./src/js/models.js?v=2.6.2"></script>
-<script type="text/javascript" src="src/js/menu.js?v=2.6.2"></script>
-<script type="text/javascript" src="./src/js/main.js?v=2.6.2"></script>
+<script type="text/javascript" src="./src/js/models.js?v=2.6.3"></script>
+<script type="text/javascript" src="src/js/menu.js?v=2.6.3"></script>
+<script type="text/javascript" src="./src/js/main.js?v=2.6.3"></script>
 </html>
