Change how content is loaded with preview

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -52,14 +52,29 @@
 
 	<!-- The Content View section -->
 	<div id="contentViewSection" class="hidden showOnContentView hideOnDescriptionView hideOnListView">
-		<div id="contentNavLeft" class="contentNav left" >
+		<!-- <div id="contentNavLeft" class="contentNav left" >
 			<i class="fa-solid fa-chevron-left" onclick="onPrev()"></i>
 		</div>
 		<div id="contentNavRight" class="contentNav right" >
 			<i class="fa-solid fa-chevron-right" onclick="onNext()"></i>
-		</div>
+		</div> -->
 		<div id="videoFramePanel"></div>
 	</div>
+
+	<!-- Content Nav Section -->
+	<!-- <div id="contentNavSection" class="hidden centered showOnContentView hideOnListView hideOnDescriptionView">
+		<div class="contentNav left pointer" onclick="onPrev()">
+			<i class="fa-solid fa-circle-arrow-left" ></i>
+			<span>prev</span>	
+		</div>
+		<div class="contentNav centered" style="width:100%; z-index:-10">
+			1 of 21
+		</div>
+		<div class="contentNav right pointer" onclick="onNext()">
+			<span>next</span>
+			<i class="fa-solid fa-circle-arrow-right"></i>
+		</div>
+    </div> -->
 
 </body>
 <!-- Stream Embed API -->
