--- a/events/index.html
+++ b/events/index.html
@@ -6,7 +6,7 @@
 	<title>Event</title>
 	<link rel="stylesheet" type="text/css" href="src/css/main.css?v=2.7.3">
 	<link rel="stylesheet" type="text/css" href="src/css/events.css?v=2.7.3">
-	<link rel="stylesheet" type="text/css" href="https://dejai.github.io/scripts/css/dtk-styles.css">
+	<link rel="stylesheet" type="text/css" href="https://dejai.github.io/scripts/css/dtk-styles.css?v=2.7.3">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
