Add content overview

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	</div>
 
 	<!-- List of adventures -->
-	<div id="adventuresPanel" class="toggleOnSideNavMobile centered">
+	<div id="adventuresPanel" class="centered">
 		<div class="centered">
 			<span style="font-size:35px;"><i class="fa-solid fa-spinner dtk-spinning dtk-spinning-1000"></i></span>
 		</div>
