Fix share link section

--- a/adventure/index.html
+++ b/adventure/index.html
@@ -45,7 +45,7 @@
 	<div id="subMenuSection" class="hidden showOnContentView showOnDescriptionView hideOnListView showOnError" >
 		<span class="subMenuItem subMenuItemLeft fa fa-chevron-circle-left pointer iconSize hidden showOnContentView showOnDescriptionView hideOnListView hideIfOneContent" onclick="onPreviousView()"></span>
 		<span id="contentTitle" class="subMenuItem subMenuItemMiddle hidden centered showOnContentView hideOnDescriptionView"></span>
-		<span id="shareContentShortLinkSection" data-short-link="" class="shareContentLinkSection pointer subMenuItem subMenuItemRight hidden hideOnDescriptionView">
+		<span id="shareContentShortLinkSection" data-short-link="" class="shareLinkSection pointer subMenuItem subMenuItemRight hidden hideOnDescriptionView">
 			<span class="shareLink showAfterLinkCopied hideOnLinkCopied">
 				<i class="fa-regular fa-share-from-square shortLink " onclick="onCopyShortLink(this)"></i>&nbsp;<span onclick="onCopyShortLink(this)">share</span>
 			</span>
