Adjust size of input for mobile experience

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			</div>
 			<div class="menuItem menuItemRight">
 				<div id="searchBarSection" class="searchBarSection">
-					<input id="searchBarInput" type="text" placeholder="Search adventures ... " onkeyup="onSearchAdventures()" disabled>
+					<input id="searchBarInput" class="mobileInput" type="text" placeholder="Search adventures ... " onkeyup="onSearchAdventures()" disabled>
 					<i id="searchToggleIcon" class="fa-solid fa-magnifying-glass pointer searchIcons" onclick="toggleSearchBar()"></i> 
 					<i id="searchClearIcon" class="fa-solid fa-xmark hidden searchIcons pointer" aria-hidden="true" onclick="onClearSearch()"></i>
 				</div>
